移除不兼容空安全的库

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_base_framework:
+    path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
